# Alert-Monitoring-Agent

./: Pipfile  README.md  pyproject.toml
src/: main.py
src/agents/alert/: alert_agent.py
src/agents/alerts/: alert_agent.py
src/agents/backend/: backend_agent.py
src/agents/notification/: notification_agent.py
src/agents/notifications/: notification_agent.py
src/agents/source/: soruce_agent.py
src/agents/sources/: source_agent.py
src/frontend/: package.json
src/frontend/pages/: index.tsx
src/messages/: __init__.py  alert.py  alert_protocol.py  notification.py  source.py  source_protocol.py
src/utils/: future.py
